2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/agents_modules.php: changed the header of the table
	agents modules, now it uses css3 (and some tricks in javascript)
	and the text for the modules is vertical.
	
	Fixes: #3539424
	
	* operation/integria_incidents/incident.list.php,
	operation/search_users.getdata.php,
	godmode/servers/manage_recontask_form.php,
	godmode/massive/massive_delete_action_alerts.php,
	godmode/modules/manage_network_components_form.php: improved the
	source code style.

2013-04-25  Ramon Novoa  <rnovoa@artica.es>

	* images/cross_double.png,
	  godmode/users/user_list.php: Added support to delete users from all
	  consoles to the metaconsole. Fixes bug #3607619.

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/events/custom_events.php,
	godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_edit_agents.php,
	godmode/massive/massive_delete_modules.php,
	godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_profiles.php,
	godmode/massive/massive_delete_alerts.php,
	godmode/groups/modu_group_list.php, godmode/groups/group_list.php,
	godmode/reporting/graph_builder.php, godmode/reporting/graphs.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php, include/functions_ui.php,
	include/functions_graph.php: improved the source code.

2013-04-25  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql: Removed an unused column from tagente_datos_inc.
	  Fixes bug #3611681.

	* godmode/servers/modificar_server.php: Fixed a comment.

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora.js: set the title for the large
	modules.
	
	Fixes: #3609509

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>
